# cargo-snatch

./: Cargo.toml  README.md
src/: config.rs  main.rs  template.rs
src/types/: registry.rs
template_repo/: Cargo.toml  README.md
template_repo/src/: lib.rs
